media files added & minor changes to webpage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Excursion | Coming Soon</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./resources/css/style.css">
 </head>
 
 <body>
@@ -12,6 +12,15 @@
 		<h1>Discover hidden places in the world around you</h1>
 		<p><a href="">Download Excursion (Coming soon!)</a></p>
 	</header>
+	<main>
+		<video autoplay loop muted>
+			<source src="./resources/media/excursion.mp4" type="video/mp4">
+			Your browser does not support the video.
+		</video>
+		<section>
+			<h2>Your personal travel guide</h2>
+	</main>
+
 </body>
 
 </html>
