completed html & css

--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
 	</header>
 	<main>
 		<video autoplay loop muted>
+			<!-- Looped video of iphone screen -->
 			<source src="./resources/media/excursion.mp4" type="video/mp4">
 			Your browser does not support the video.
 		</video>
 		<section>
 			<h2>Your personal travel guide</h2>
+			<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+			<!-- Image of tent overlooking night sky -->
+			<img src="./resources/media/camp.webp" alt="Tent overlooking night sky"><br><br>
+			<!-- Image of small phone symbol -->
+			<img src="./resources/media/phone.webp" alt="Small image of phone">
+			<h2>Coming Soon for iPhone and Android</h2>
+			<p><a href="">Download Excursion (Coming soon!)</a></p>
+		</section>
 	</main>
-
+	<footer>
+		<p id="footer">&copy; Excursion</p> 
+	</footer>
 </body>
 
 </html>
